<resources>
    <string name="app_name">The Entertainer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="title_shop">Shop</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content_text">Thousands of Buy One Get One Free offers in cities\nacross the world.\n Register to try out a free offer before you buy.</string>
    <string name="Register">Register</string>
    <string name="take_a_tour">Take a tour</string>
    <string name="already_have_account">Already have an account? SIgn In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_account">Dont have an account?</string>
    <string name="sing_in_facebook">Sign in with facebook</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="iaccept_agrement">I accept the user license agreement</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRMATION PASSWORD</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="country_of_residence">Country of residence</string>
    <string name="register_with_facebook">Register with facebook</string>
    <string name="quick_search">Quick search by name or keyword</string>
    <string name="search">Search</string>
    <string name="food_and_drink">Food &amp; drink</string>
    <string name="beauty_and_fitness">Beauty &amp; fitness</string>
    <string name="attraction_and_leisure"><![CDATA[Attraction & leisure]]></string>
    <string name="retail_and_service"><![CDATA[Retail & service]]></string>
</resources>
