<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_shoping"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_shop" />




</menu>
